Added modal Showed info on the click on a modal

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,4 +1,11 @@
 .sk-card{
     margin: auto;
     width: 50%;
+    border: 1px solid #dddddd;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.sk-pad-content{
+    padding: 10px 5px;
 }
